# pumpup

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pumpup-agent-guide.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  integration-request.md
hermes-plugin/: .gitignore  README.md  __init__.py  plugin.yaml  pyproject.toml
hermes-plugin/pumpup_hermes/: __init__.py  adapter.py  attachments.py  client.py  config.py  errors.py  poll.py  schemas.py  state.py  tools.py
hermes-plugin/pumpup_hermes/skills/guide/: SKILL.md
hermes-plugin/tests/: conftest.py  test_attachments.py  test_config.py  test_errors.py  test_poll.py  test_state.py  test_tools.py
openclaw-plugin/: .gitignore  README.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.codegen.json  tsconfig.json  tsup.config.ts
openclaw-plugin/scripts/: gen-guide.mjs  gen-schemas.mjs
openclaw-plugin/skills/pumpup/: SKILL.md
openclaw-plugin/src/: attachments.ts  cli.ts  client.ts  config.ts  errors.ts  index.ts  poll.ts  state.ts  tools.ts
