[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pumpup-hermes-plugin"
version = "0.0.7"
description = "Pump Up × Hermes plugin — request human approvals/elicitations and resume agent work on the decision."
readme = "README.md"
requires-python = ">=3.10"
# The Pump Up SDK provides `pumpup` (pydantic + httpx transitively); we use both directly too — httpx for
# the resume call to the local Hermes API server, pydantic to validate + serialise the breadcrumb store,
# pydantic-settings to load + validate env config (fail-fast on a missing/invalid value).
dependencies = [
    "pumpup-sdk==0.0.7",
    "httpx>=0.27",
    "pydantic>=2",
    "pydantic-settings>=2",
]

# Hermes discovers a pip-installed plugin via this entry-point group, then imports the package and
# calls its register(ctx). (plugin.yaml is only read for directory-installed plugins, not this path.)
[project.entry-points."hermes_agent.plugins"]
pumpup = "pumpup_hermes"

# `dependencies` pins the published PyPI version; `[tool.uv.sources]` overrides the source to the SDK
# repo's `dev` branch for LOCAL development only (latest spec via `mise run fern:sdk:dev`). uv strips
# sources from the built wheel, so a published / `uv sync --no-sources` install resolves from PyPI.
[tool.uv.sources]
pumpup-sdk = { git = "https://github.com/pumpupai/pumpup-sdk-python.git", branch = "dev" }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["pumpup_hermes"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
